table randomiser, formatting stuff

--- a/Assessment Code/HTML/Start.html
+++ b/Assessment Code/HTML/Start.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Orizoru: Welcome</title>
     <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js" defer></script>
-    <script src="/JS/script.js" defer></script>
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <script src="../JS/script.js" defer></script>
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
 
   <body onload="startTime()">
     <container> 
         <h1 id="title"> Welcome. </h1>
         <div class="buttons">
-            <button id="beginBtn" onclick="document.location='index.html'"> Please tap to begin. </button>
+            <button class="custom-btn btn-5" id="beginBtn" onclick="document.location='index.html'"> Please click to begin. </button>
         </div>
         <h1 id="clock"> </h1>
-        <h2 id="greeting"> </h2>
     </container>
   </body>
 </html>
