--- a/Assessment Code/HTML/Menus/random.html
+++ b/Assessment Code/HTML/Menus/random.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orizoru: Select Menu </title>
     <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js" defer></script>
-    <script src="/JS/ai.js" defer></script>
-    <script src="/JS/ai2.js" defer></script>
+    <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js" defer></script>
+    <script src="/Assessment Code/JS/ai.js" defer></script>
+    <script src="/Assessment Code/JS/ai2.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="/Assessment Code/CSS/style.css" />
   </head>
 
   <body>
     
     <container> 
-        <h1> PERSONALISED MENU. </h1>
+        <h1 id="title2"> Personalised Menu. </h1>
         <canvas id="canvas" class="capturedImage"> </canvas>
         <div id="results"> 
             <div class="container">
