--- a/Assessment Code/HTML/Table.html
+++ b/Assessment Code/HTML/Table.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orizoru: Table Selection</title>
     <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js" defer></script>
-    <script src="/JS/ai.js" defer></script>
-    <script src="/JS/ai2.js" defer></script>
+    <script src="../JS/ai.js" defer></script>
+    <script src="../JS/ai2.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
-
   <body>
     
     <container> 
@@ -23,18 +22,8 @@
       <video id="webcam"></video>
       <canvas id="canvas" class="capturedImage"> </canvas>
 
-      <div id="results"> 
-          <div class="container">
-              <div class="right" id="textBox2"></div>
-          </div>
-          <div class="container">
-              <div class="left" id="textBox3"></div>
-              <div class="right" id="textBox4"></div>
-          </div>
-          <div class="container">
-              <div class="left" id="textBox5"></div>
-              <div class="right" id="textBox6"></div>
-          </div>
+      <div class="tableNumbers"> 
+        <div id="tabletxt"> </div>
       </div>
     </container>
 
