formatting and loading pages

--- a/Assessment Code/HTML/index.html
+++ b/Assessment Code/HTML/index.html
@@ -48,5 +48,14 @@
         <button id="contBtn" onclick="document.location='Select.html'"> Continue </button>
       </div>
     </container>
+
+    <container id="randomPage2"> 
+      <div> 
+          <h1> Drinks </h1>
+          <p id=""></p>
+      </div>
+      
+      <h1 id="title2"> We Hope You Enjoy :). </h1>
+  </container>
   </body>
 </html>
