--- a/Assessment Code/HTML/random2.html
+++ b/Assessment Code/HTML/random2.html
@@ -7,27 +7,21 @@
     <title>Orizoru: Select Menu </title>
     <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js" defer></script>
     <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js" defer></script>
-    <script src="/Assessment Code/JS/ai.js" defer></script>
-    <script src="/Assessment Code/JS/ai2.js" defer></script>
+    <script src="../JS/ai.js" defer></script>
+    <script src="../JS/ai2.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="/Assessment Code/CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
 
   <body>
     
     <container> 
-        <h1 id="title2"> Personalised Menu. </h1>
-        <canvas id="canvas" class="capturedImage"> </canvas>
-        <div id="results"> 
-            <div class="container">
-              <div class="right" id="textBox1"></div>
-          </div>
-              <div class="container">
-                  <div class="right" id="textBox2"></div>
-              </div>
-              <div class="container">
-                  <div class="left" id="textBox3"></div>
-              </div>
+        <div> 
+            <h1> Drinks </h1>
+            <p id=""></p>
+        </div>
+        
+        <h1 id="title2"> We Hope You Enjoy :). </h1>
     </container>
 
   </body>
