--- a/Assessment Code/HTML/Start.html
+++ b/Assessment Code/HTML/Start.html
@@ -10,12 +10,15 @@
     <link rel="stylesheet" href="../CSS/style.css" />
   </head>
 
+    <!-- clock function that displays the current time. ---> 
+
   <body onload="startTime()">
     <container> 
         <h1 id="title"> Welcome. </h1>
         <div class="buttons">
             <button class="custom-btn btn-5" id="beginBtn" onclick="document.location='index.html'"> Please click to begin. </button>
         </div>
+          <!-- where the clock shows up -->
         <h1 id="clock"> </h1>
     </container>
   </body>
