--- a/Assessment Code/HTML/index.html
+++ b/Assessment Code/HTML/index.html
@@ -62,14 +62,19 @@
 
     <container id="randomPage2" style="display: none;"> 
       <div> 
+        <div class="drinks">           
           <h1> Drinks </h1>
           <p id="textBox1"></p>
+        </div>
+        <div class="dinner"> 
           <h1> Dinner </h1>
           <p id="textBox2"></p>
+        </div>
+        <div class="dessert"> 
           <h2> Dessert </h2>
           <p id="textBox3"> </p>
+        </div>
       </div>
-      <h1> We Hope You Enjoy :). </h1>
       <button id="returnBtn4"> Return </button>
     </container>
 
