--- a/Assessment Code/HTML/index.html
+++ b/Assessment Code/HTML/index.html
@@ -35,6 +35,7 @@
       <div>
         <h1 id="title2"> Your Table No. is: </h1>
         <h1 id="tableText"> </h1>
+        <p> Please click continue to proceed to menu selection. </p>
         <button id="contBtn"> Continue </button>
       </div>
     </container>
@@ -65,15 +66,15 @@
       <div class="randomMenuDesc"> 
         <div class="drinks">           
           <h1> Drinks </h1>
-          <p id="textBox1"></p>
+          <p class="textBox" id="textBox1"></p>
         </div>
         <div class="dinner"> 
           <h1> Dinner </h1>
-          <p id="textBox2"></p>
+          <p class="textBox" id="textBox2"></p>
         </div>
         <div class="dessert"> 
           <h1> Dessert </h1>
-          <p id="textBox3"> </p>
+          <p class="textBox" id="textBox3"> </p>
         </div>
       </div>
       <button id="returnBtn4"> Return </button>
